sync api, add log, lsp, model, usage
